--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <h1>New socket chat api</h1>
+    <h1>New socket chat api demo</h1>
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
